2007-09-20  Raphaël Quinet  <raphael@gimp.org>

	* plug-ins/jpeg/jpegqual.c (quant_info): updated the table of
	known devices and software, work in progress.

2007-09-20  Michael Natterer  <mitch@gimp.org>

	* menus/image-menu.xml.in: added placeholder Edit/Preferences and
	move the preferences and keyboard shortcut dialogs there.

	* plug-ins/common/uniteditor.c (query): register the unit editor
	there too.

2007-09-19  Sven Neumann  <sven@gimp.org>

	* app/base/gimphistogram.c: weight pixels by their alpha value
	(bug #477689).

2007-09-19  Sven Neumann  <sven@gimp.org>

	* plug-ins/common/compose.c: removed extra arguments that were
	added to the compose procedures in the 2.3 development cycle.
	Restores compatibility and fixes bug #477795.

2007-09-19  Raphaël Quinet  <raphael@gimp.org>

	* plug-ins/jpeg/jpegqual.c: Re-wrote large parts of the code,
	still work in progress: use GOption for command-line options, add
	number of quantization tables in QuantInfo, added info for more
	sources (devices or software) but not verified yet.

2007-09-19  Raphaël Quinet  <raphael@gimp.org>

	* plug-ins/jpeg/jpeg-load.c
	* plug-ins/jpeg/jpeg-save.c: ifdef'ed out some debugging
	statements so that they show up only in unstable releases.

	* plug-ins/jpeg/jpeg.c (run): removed calls to gimp_set_data() and
	gimp_get_data() so that changes made to the JPEG save settings for
	one file do not affect other files saved later.

2007-09-18  Michael Natterer  <mitch@gimp.org>

	* app/gui/gtk-macmenu.[ch]: removed...

	* app/gui/ige-mac-menu.[ch]: ...and replaced by new versions which
	don't use the GTK+ namespace.

	* app/gui/Makefile.am
	* app/gui/gui.c: changed accorgingly.

2007-09-18  Michael Natterer  <mitch@gimp.org>

	* configure.in: replaced HAVE_GDK_QUARTZ conditional by
	--disable-toolbox-menu configure switch which defaults to "no"
	normally and to "yes" on quartz.

	* app/widgets/gimptoolbox.c: changed #ifdef accordingly.

	* app/plug-in/Makefile.am