@@ -549,28 +549,28 @@ gui_recent_list_add_uri (Gimp        *gimp,
                          const gchar *uri,
                          const gchar *mime_type)
 {
-  GtkRecentManager *mgr;
+  GtkRecentManager *manager;
   GtkRecentData     recent;
   const gchar      *groups[2] = { "Graphics", NULL };
 
   g_return_val_if_fail (GIMP_IS_GIMP (gimp), FALSE);
   g_return_val_if_fail (uri != NULL, FALSE);
-  g_return_val_if_fail (mime_type != NULL, FALSE);
 
-  mgr = gtk_recent_manager_get_default ();
+  manager = gtk_recent_manager_get_default ();
 
-  g_return_val_if_fail (mgr != NULL, FALSE);
+  g_return_val_if_fail (manager != NULL, FALSE);
 
   /* use last part of the URI */
   recent.display_name = NULL;
 
   /* no special description */
   recent.description  = NULL;
-  recent.mime_type    = (gchar *) mime_type;
+  recent.mime_type    = (mime_type ?
+                         (gchar *) mime_type : "application/octet-stream");
   recent.app_name     = "GNU Image Manipulation Program";
   recent.app_exec     = GIMP_COMMAND " %u";
-  recent.groups       = groups;
+  recent.groups       = (gchar **) groups;
   recent.is_private   = FALSE;
 
-  return gtk_recent_manager_add_full (mgr, uri, &recent);
+  return gtk_recent_manager_add_full (manager, uri, &recent);
 }
